edited css responive

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
          <footer>
       <div class="footer-container">
-        <div class="nav-logo">
+        <div class="nav-logo footer-nav">
             <img src="./images/Frame.png" alt="">
             <h2 class="nav-title"><span class="letter-g">G</span><span class="fotter-amer">amer</span></h2>
         </div>
