--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gamer</title>
+    <title>Gamer Zone</title>
+    <link rel="icon" type="image" href="./images/favicon.png">
     <link rel="stylesheet" href="styles/blog.css">
     <link rel="stylesheet" href="styles/responsive.css">
     <script src="https://kit.fontawesome.com/485223d2ff.js" crossorigin="anonymous"></script>
@@ -66,9 +67,14 @@
                 <p class="funny-description">Did you score? #unblockedgames #school</p>
              </div>
 
-            <div class="image-item">
+            <div class="image-item watch-item">
                 <img src="./images/Rectangle 7.png" alt="">
                 <p class="funny-description">Breaking game records like OG</p>
+                <div class="watch-now">
+                    <i class="fa-solid fa-play"></i> <br>
+                    <span>Watch Now</span>
+                </div>
+
             </div>
            
             <div class="image-item">
